Add archived bool field for todo and did DELEET request to archived it
