# public/swagger/swagger.json
@@ -300,6 +300,10 @@
                                       "type": "integer",
                                       "example": 0
                                     },
+                                    "archived": {
+                                      "type": "integer",
+                                      "example": 0
+                                    },
                                     "created_at": {
                                       "type": "string",
                                       "example": "2020-04-15 15:14:04"
@@ -590,6 +594,10 @@
                           "favorite": {
                             "type": "integer",
                             "example": 1
+                          },
+                          "archived": {
+                            "type": "integer",
+                            "example": 0
                           },
                           "created_at": {
                             "type": "string",
@@ -887,6 +895,10 @@
                             "example": null
                           },
                           "favorite": {
+                            "type": "integer",
+                            "example": 0
+                          },
+                          "archived": {
                             "type": "integer",
                             "example": 0
                           },
@@ -1985,6 +1997,10 @@
                       "type": "integer",
                       "example": 0
                     },
+                    "archived": {
+                      "type": "integer",
+                      "example": 0
+                    },
                     "created_at": {
                       "type": "string",
                       "example": "2020-04-15 15:14:04"
@@ -2253,6 +2269,10 @@
                       "type": "integer",
                       "example": 1
                     },
+                    "archived": {
+                      "type": "integer",
+                      "example": 0
+                    },
                     "created_at": {
                       "type": "string",
                       "example": "2020-04-15 15:14:04"
@@ -2388,6 +2408,145 @@
                       "example": null
                     },
                     "favorite": {
+                      "type": "integer",
+                      "example": 1
+                    },
+                    "archived": {
+                      "type": "integer",
+                      "example": 0
+                    },
+                    "created_at": {
+                      "type": "string",
+                      "example": "2020-04-15 15:14:04"
+                    },
+                    "updated_at": {
+                      "type": "string",
+                      "example": "2020-04-15 15:14:04"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request, maybe error in parameters (field length, empty field, ...)",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status code": {
+                  "type": "integer",
+                  "example": 400
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Bad request, verify your content"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized, missing bearer tokenAPI, wrong tokenAPI or trying to modify an unauthorized todo",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status code": {
+                  "type": "integer",
+                  "example": 401
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Unauthorized"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/todos/{todo_id}": {
+      "delete": {
+        "summary": "Archived (delete) the todo",
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "todo_id",
+            "required": true,
+            "type": "integer",
+            "minimum": 1,
+            "description": "The todo id"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully archived (deleted) the todo",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status code": {
+                  "type": "integer",
+                  "example": 200
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Success"
+                },
+                "resource": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "integer",
+                      "example": 4
+                    },
+                    "todo_list_id": {
+                      "type": "integer",
+                      "example": 1
+                    },
+                    "user_id": {
+                      "type": "integer",
+                      "example": null
+                    },
+                    "interval_id": {
+                      "type": "integer",
+                      "example": 1
+                    },
+                    "title": {
+                      "type": "string",
+                      "example": "Homework"
+                    },
+                    "details": {
+                      "type": "string",
+                      "example": "Do all my homework for this day"
+                    },
+                    "dueDate": {
+                      "type": "string",
+                      "example": "2020-04-20 22:00:00"
+                    },
+                    "dateTimeDone": {
+                      "type": "string",
+                      "example": null
+                    },
+                    "reminderDateTime": {
+                      "type": "string",
+                      "example": null
+                    },
+                    "intervalValue": {
+                      "type": "integer",
+                      "example": 1
+                    },
+                    "intervalEndDate": {
+                      "type": "string",
+                      "example": null
+                    },
+                    "favorite": {
+                      "type": "integer",
+                      "example": 1
+                    },
+                    "archived": {
                       "type": "integer",
                       "example": 1
                     },
